--- a/source/manager/theme-manager/CMakeLists.txt
+++ b/source/manager/theme-manager/CMakeLists.txt
@@ -22,6 +22,9 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-add_subdirectory(app)
-add_subdirectory(model)
-add_subdirectory(manager)
+set(LIB_NAME theme_manager_lib)
+
+add_library(${LIB_NAME} theme-manager.hpp theme-manager.cpp)
+enable_qt_autogen(${LIB_NAME})
+
+target_link_libraries(${LIB_NAME} PUBLIC qt6_lib theme_model_lib)
