--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -24,4 +24,4 @@ cmake_minimum_required(VERSION 3.28)
 
 add_subdirectory(app)
 add_subdirectory(model)
-add_subdirectory(manager)
+add_subdirectory(controller)
