--- a/source/controller/theme-controller/CMakeLists.txt
+++ b/source/controller/theme-controller/CMakeLists.txt
@@ -22,15 +22,9 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-set(SOURCES main.cpp)
-set(QML_SOURCES ${CMAKE_SOURCE_DIR}/ui/qml.qrc)
+set(LIB_NAME theme_controller_lib)
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${QML_SOURCES})
-enable_qt_autogen(${PROJECT_NAME})
+add_library(${LIB_NAME} theme-controller.hpp theme-controller.cpp)
+enable_qt_autogen(${LIB_NAME})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE 
-    qt6_lib
-    theme_controller_lib
-    theme_list_model_lib
-    animation_speed_manager_lib
-)
+target_link_libraries(${LIB_NAME} PUBLIC qt6_lib theme_model_lib)
