--- a/source/model/CMakeLists.txt
+++ b/source/model/CMakeLists.txt
@@ -22,6 +22,6 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-add_subdirectory(theme-model)
-add_subdirectory(theme-list-model)
-add_subdirectory(animation-speed-model)
+add_subdirectory(theme-config)
+add_subdirectory(theme-config-list)
+add_subdirectory(animation-config)
