--- a/source/model/theme-config/CMakeLists.txt
+++ b/source/model/theme-config/CMakeLists.txt
@@ -22,9 +22,9 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-set(LIB_NAME theme_model_lib)
+set(LIB_NAME theme_config_model)
 
-add_library(${LIB_NAME} STATIC theme-model.hpp theme-model.cpp)
+add_library(${LIB_NAME} STATIC theme-config.hpp theme-config.cpp)
 enable_qt_autogen(${LIB_NAME})
 
 target_link_libraries(${LIB_NAME} PUBLIC qt6_lib)
