--- a/source/internal/opengl/CMakeLists.txt
+++ b/source/internal/opengl/CMakeLists.txt
@@ -22,18 +22,6 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-set(LIB_NAME qt6_lib)
-
-find_package(Qt6 COMPONENTS Core Gui Qml OpenGLWidgets Quick QuickWidgets Widgets REQUIRED)
-
-add_library(${LIB_NAME} INTERFACE)
-target_link_libraries(${LIB_NAME} INTERFACE
-    Qt6::Core
-    Qt6::Gui
-    Qt6::Qml
-    Qt6::OpenGLWidgets
-    Qt6::Quick
-    Qt6::QuickWidgets
-    Qt6::Widgets
-    OpenGL::GL
-)
+add_subdirectory(impl)
+add_subdirectory(qml)
+add_subdirectory(utils)
