--- a/source/internal/opengl/qml/gradient-background/CMakeLists.txt
+++ b/source/internal/opengl/qml/gradient-background/CMakeLists.txt
@@ -22,18 +22,9 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-set(LIB_NAME qt6_lib)
+set(LIB_NAME qml_gradient_background)
 
-find_package(Qt6 COMPONENTS Core Gui Qml OpenGLWidgets Quick QuickWidgets Widgets REQUIRED)
+add_library(${LIB_NAME} STATIC gradient-background.hpp gradient-background.cpp)
+enable_qt_autogen(${LIB_NAME})
 
-add_library(${LIB_NAME} INTERFACE)
-target_link_libraries(${LIB_NAME} INTERFACE
-    Qt6::Core
-    Qt6::Gui
-    Qt6::Qml
-    Qt6::OpenGLWidgets
-    Qt6::Quick
-    Qt6::QuickWidgets
-    Qt6::Widgets
-    OpenGL::GL
-)
+target_link_libraries(${LIB_NAME} PUBLIC opengl_gradient_background)
