--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -25,3 +25,4 @@ cmake_minimum_required(VERSION 3.28)
 add_subdirectory(app)
 add_subdirectory(model)
 add_subdirectory(controller)
+add_subdirectory(internal)
