--- a/source/controller/animation-config/CMakeLists.txt
+++ b/source/controller/animation-config/CMakeLists.txt
@@ -27,4 +27,8 @@ set(LIB_NAME animation_config_controller)
 add_library(${LIB_NAME} animation-config.hpp animation-config.cpp)
 enable_qt_autogen(${LIB_NAME})
 
-target_link_libraries(${LIB_NAME} PUBLIC qt6_lib animation_config_model)
+target_link_libraries(${LIB_NAME} PUBLIC 
+    qt6_lib 
+    animation_config_model
+    logger
+)
