updated theme config controller

--- a/source/controller/CMakeLists.txt
+++ b/source/controller/CMakeLists.txt
@@ -24,3 +24,4 @@ cmake_minimum_required(VERSION 3.28)
 
 add_subdirectory(theme-config)
 add_subdirectory(animation-config)
+add_subdirectory(user-config)
