--- a/source/controller/user-config/CMakeLists.txt
+++ b/source/controller/user-config/CMakeLists.txt
@@ -29,6 +29,7 @@ enable_qt_autogen(${LIB_NAME})
 
 target_link_libraries(${LIB_NAME} PUBLIC
     qt6_lib
+    json_io
     user_config_model 
     logger
 )
