added forecast card controller & model

--- a/source/model/CMakeLists.txt
+++ b/source/model/CMakeLists.txt
@@ -26,3 +26,5 @@ add_subdirectory(theme-config)
 add_subdirectory(theme-config-list)
 add_subdirectory(animation-config)
 add_subdirectory(user-config)
+add_subdirectory(forecast-card)
+add_subdirectory(forecast-card-list)
