--- a/source/model/forecast-card-list/CMakeLists.txt
+++ b/source/model/forecast-card-list/CMakeLists.txt
@@ -22,22 +22,9 @@
 
 cmake_minimum_required(VERSION 3.28)
 
-set(SOURCES main.cpp)
-set(QML_SOURCES ${CMAKE_SOURCE_DIR}/ui/qml.qrc)
+set(LIB_NAME forecast_card_list_model)
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${QML_SOURCES})
-enable_qt_autogen(${PROJECT_NAME})
+add_library(${LIB_NAME} forecast-card-list.hpp forecast-card-list.cpp)
+enable_qt_autogen(${LIB_NAME})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE 
-    qt6_lib
-    theme_config_controller
-    theme_config_list_model
-    animation_config_controller
-    qml_gradient_background
-    user_config_model 
-    user_config_controller
-    forecast_card_controller
-    forecast_card_model
-    forecast_card_list_model
-    logger
-)
+target_link_libraries(${LIB_NAME} PUBLIC forecast_card_model qt6_lib)
