--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(model)
 add_subdirectory(controller)
 add_subdirectory(internal)
 add_subdirectory(utils)
+add_subdirectory(service)
