--- a/source/app/CMakeLists.txt
+++ b/source/app/CMakeLists.txt
@@ -30,8 +30,8 @@ enable_qt_autogen(${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE 
     qt6_lib
-    theme_config_controller
-    theme_config_list_model
+    theme_controller
+    theme_list_model
     animation_config_controller
     qml_gradient_background
     user_config_model 
@@ -39,5 +39,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     forecast_card_controller
     forecast_card_model
     forecast_card_list_model
+    error_handler
+    error_emitter
     logger
 )
